--- a/index.html
+++ b/index.html
@@ -178,11 +178,12 @@
       }
       
       #timer {
+         display:inline-block;
         font-size: 24px;
         font-family: Pretendard;
         padding: 10px;
         background: #f0f0f0;
-        border-radius: 5px;
+        border-radius: 8px;
          cursor: grab;
          user-select: none;
       }
