--- a/index.html
+++ b/index.html
@@ -157,13 +157,13 @@
 
 
       /* 기존 토글 관련 코드 제거 */
-      section{float:left;width:518px;margin-top:15px;
+      section{float:left;width:50%;margin-top:15px;
              margin-bottom:20px;padding:20px;border:1px 
               solid #330000;line-height:20px;background: #fff; border-width:5px;}
 
       article{margin-bottom:10px}
       article h3{font-size:16px}
-      aside{float:right;width:450px;padding:10px;margin-top:15px;border:
+      aside{float:right;width:50%;padding:10px;margin-top:15px;border:
                          1px solid #330000;line-height:20px ;background: #fff; border-width: 5px;}
       aside p { text-align:center; }
       aside .ad{height:100px;margin-bottom:20px;background-color:#ebebeb}
