--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                          1px solid #330000;line-height:20px ;background: #fff; border-width: 5px;}
       aside p { text-align:center; }
       aside .ad{height:100px;margin-bottom:20px;background-color:#ebebeb}
-      footer{clear:both;padding:20px;border:1px solid #330000 ;background: #fff;
+      footer{width:80%;padding:20px;border:1px solid #330000 ;background: #fff;
               text-align:center; border-width: 3px; }
 
       .video-center {
