--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
       aside p { text-align:center; }
       aside .ad{height:100px;margin-bottom:20px;background-color:#ebebeb}
       footer{width:80%;padding:20px;border:1px solid #330000 ;background: #fff;
-              text-align:center; border-width: 3px; clear:both;}
+              text-align:center; border-width: 3px; clear:both; align-items:center;}
 
       .video-center {
          display: flex;
