--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
          background-repeat:repeat; /* 기본값:가로, 세로 모두 반복*/
          background-size:25% 25%; /* 이미지 크기 조절*/
          background-position:left top; /* 시작 위치*/ 
+
+         cursor:none; /*기본 커서 숨기기 */
       }
       li{list-style:none}
       
@@ -198,6 +200,15 @@
          user-select: none;
       }
 
+      #custom-cursor {
+         position:fixed;
+         width:40px;
+         height:40px;
+         pointer-events:none; /*이미지가 클릭 등 이벤트를 막지 않도록 */
+         z-index:99999;
+         transform:translate(-50%,-50%); /* 이미지 중앙이 커서에 오도록 */
+      }
+
   </style> 
 </head>
 <body> 
@@ -208,6 +219,8 @@
    <script>
       document.getElementById('myVideo').playbackRate = 16; // 최대 16배속 재생
    </script>
+
+   <img id="custom-cursor" src="https://tjdgus5160.github.io/Half-life.png" style="display:none;" />
    
    <div id="container">
    <header>
@@ -357,6 +370,22 @@ Draggable.create("#timer", {
   cursor: "grab",
   activeCursor: "grabbing"
 });
+</script>
+
+// 마우스 커서 JS
+<script>
+const cursorImg = document.getElementById('custom-cursor');
+
+// 페이지가 로드되면 이미지 보이기
+window.addEventListener('DOMContentLoaded', () => {
+  cursorImg.style.display = 'block';
+});
+
+document.addEventListener('mousemove', (e) => {
+  cursorImg.style.left = `${e.clientX}px`;
+  cursorImg.style.top = `${e.clientY}px`;
+});
+
 </script>
 
 </body>
