--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
       li{list-style:none}
       
       #container{width:80%; margin:0; box-sizing:border-box; }
-      header{margin-top:20px;padding:20px;border:1px solid #000;background: #fff; border-width: 10px; align-items:center;}
+      header{margin-top:20px;padding:20px;border:1px solid #000;background: #fff; 
+             border-width: 10px; align-items:center; margin: 0 auto;}
       hgroup{overflow:hidden;padding-bottom:20px}
       hgroup h1{float:left;font-size:36px;color:#000}
       hgroup h2{float:right;font-weight:normal;color:#000;opacity:0.8}
@@ -228,7 +229,7 @@
    <div id="container">
    <header>
       <hgroup>
-         <h1>세상은 돈다<br></h1>
+         <h1>세상은   돈다<br></h1>
          <h2>by 박성현</h2>
       </hgroup>
    </header>
