--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       #container{width:80%; margin:0; box-sizing:border-box; }
       header{margin-top:20px;padding:20px;border:1px solid #000;background: #fff; 
              border-width: 10px; align-items:center; }
-      hgroup{overflow:hidden;padding-bottom:20px}
+      hgroup{overflow:hidden;padding-bottom:20px; align-items:center;}
       hgroup h1{float:none;font-size:36px;color:#000, text-align:center; }
       hgroup h2{float:right;font-weight:normal;color:#000;opacity:0.8}
 
