--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       #container{width:80%; margin:0; box-sizing:border-box; }
       header{margin-top:20px;padding:20px;border:1px solid #000;background: #fff; 
              border-width: 10px; align-items:center; }
-      hgroup{overflow:hidden;padding-bottom:20px; align-items:center;}
+      hgroup{overflow:hidden;padding-bottom:20px; }
       hgroup h1{float:none;font-size:36px;color:#000, text-align:center; }
       hgroup h2{float:right;font-weight:normal;color:#000;opacity:0.8}
 
@@ -218,6 +218,22 @@
 <body> 
    <video id="myVideo" width="960" height="720" autoplay loop muted>
      <source src="https://tjdgus5160.github.io/KakaoTalk_20250420_022556182.mp4" type="video/mp4">
+     브라우저가 video 태그를 지원하지 않습니다.
+   </video>
+   <script>
+      document.getElementById('myVideo').playbackRate = 16; // 최대 16배속 재생
+   </script>
+
+   <video id="myVideo" width="480" height="360" autoplay loop muted>
+     <source src="https://tjdgus5160.github.io/오이이아이.mp4" type="video/mp4">
+     브라우저가 video 태그를 지원하지 않습니다.
+   </video>
+   <script>
+      document.getElementById('myVideo').playbackRate = 16; // 최대 16배속 재생
+   </script>
+
+   <video id="myVideo" width="480" height="360" autoplay loop muted>
+     <source src="https://tjdgus5160.github.io/오이이아이.mp4" type="video/mp4">
      브라우저가 video 태그를 지원하지 않습니다.
    </video>
    <script>
