--- a/index.html
+++ b/index.html
@@ -224,20 +224,20 @@
       document.getElementById('myVideo').playbackRate = 16; // 최대 16배속 재생
    </script>
 
-   <video id="myVideo" width="480" height="360" autoplay loop muted>
+   <video id="myVideo1" width="360" height="240" autoplay loop muted>
      <source src="https://tjdgus5160.github.io/오이이아이.mp4" type="video/mp4">
      브라우저가 video 태그를 지원하지 않습니다.
    </video>
    <script>
-      document.getElementById('myVideo').playbackRate = 16; // 최대 16배속 재생
+      document.getElementById('myVideo1').playbackRate = 16; // 최대 16배속 재생
    </script>
 
-   <video id="myVideo" width="480" height="360" autoplay loop muted>
+   <video id="myVideo2" width="360" height="240" autoplay loop muted>
      <source src="https://tjdgus5160.github.io/오이이아이.mp4" type="video/mp4">
      브라우저가 video 태그를 지원하지 않습니다.
    </video>
    <script>
-      document.getElementById('myVideo').playbackRate = 16; // 최대 16배속 재생
+      document.getElementById('myVideo2').playbackRate = 16; // 최대 16배속 재생
    </script>
 
    <img id="custom-cursor" src="https://tjdgus5160.github.io/Half-life.png" style="display:none;" />
