--- a/index.html
+++ b/index.html
@@ -216,6 +216,8 @@
   </style> 
 </head>
 <body> 
+
+   <div class
    <video id="myVideo" width="960" height="720" autoplay loop muted>
      <source src="https://tjdgus5160.github.io/KakaoTalk_20250420_022556182.mp4" type="video/mp4">
      브라우저가 video 태그를 지원하지 않습니다.
@@ -229,7 +231,7 @@
      브라우저가 video 태그를 지원하지 않습니다.
    </video>
    <script>
-      document.getElementById('myVideo1').playbackRate = 16; // 최대 16배속 재생
+      document.getElementById('myVideo1').playbackRate = 4; // 최대 16배속 재생
    </script>
 
    <video id="myVideo2" width="360" height="240" autoplay loop muted>
@@ -237,7 +239,7 @@
      브라우저가 video 태그를 지원하지 않습니다.
    </video>
    <script>
-      document.getElementById('myVideo2').playbackRate = 16; // 최대 16배속 재생
+      document.getElementById('myVideo2').playbackRate = 4; // 최대 16배속 재생
    </script>
 
    <img id="custom-cursor" src="https://tjdgus5160.github.io/Half-life.png" style="display:none;" />
