--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
          display: flex;
          justify-content:center; /*가로 중앙*/
          align-items:center; /*세로 중앙*/
-         height:10vh; /*화면 전체 높이*/
+         /*height:10vh; 화면 전체 높이*/
       }
 
       .clearfix::after {
