--- a/index.html
+++ b/index.html
@@ -242,10 +242,10 @@
    </script>
 
    <div class="video-row">
-     <video class="side-video" src="https://tjdgus5160.github.io/오이이아이.mp4" controls width="360" height="240" autoplay loop muted>
+     <video class="side-video" src="https://tjdgus5160.github.io/오이이아이.mp4" width="360" height="240" autoplay loop muted>
         브라우저가 video 태그를 지원하지 않습니다.
      </video>
-     <video class="side-video" src="https://tjdgus5160.github.io/오이이아이.mp4" controls width="360" height="240" autoplay loop muted>
+     <video class="side-video" src="https://tjdgus5160.github.io/오이이아이.mp4" width="360" height="240" autoplay loop muted>
         브라우저가 video 태그를 지원하지 않습니다.
      </video>
    </div>
