--- a/index.html
+++ b/index.html
@@ -248,6 +248,8 @@
      <video class="side-video" src="https://tjdgus5160.github.io/오이이아이.mp4" width="360" height="240" autoplay loop muted>
         브라우저가 video 태그를 지원하지 않습니다.
      </video>
+   </div>
+   <div class="video-row">
       <video class="side-video" src="https://tjdgus5160.github.io/오이이아이.mp4" width="360" height="240" autoplay loop muted>
         브라우저가 video 태그를 지원하지 않습니다.
      </video>
