--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
         place-items: center;
 
          background-image:url('https://tjdgus5160.github.io/check_pattern.png');
-         background-repeat:repeat; /* 기본값:가로, 세로 모두 반복*/
-         background-size:25% 25%; /* 이미지 크기 조절*/
-         background-position:left top; /* 시작 위치*/ 
+         background-repeat:no-repeat; /* 기본값:가로, 세로 모두 반복*/
+         background-size:cover; /* 이미지 크기 조절*/
+         background-position:center center; /* 시작 위치*/ 
+         background-color: #fff;
 
          cursor:none; /*기본 커서 숨기기 */
       }
