--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
       aside .ad{height:100px;margin-bottom:20px;background-color:#ebebeb}
       footer{width:80%;padding:20px;border:1px solid #330000 ;background: #fff;
               text-align:center; border-width: 3px; clear:both; align-items:center;
-            margin: 0 auto;
+            margin: 0 auto; margin-bottom:50px; 
             }
 
       .video-center {
