--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
       li{list-style:none}
       
       #container{width:80%; margin:0; box-sizing:border-box; }
-      header{margin-top:20px;padding:20px;border:1px solid #000;background: #fff; 
-             border-width: 10px; align-items:center; }
+      header{margin-top:5px;padding:20px;border:1px solid #000;background: #fff; 
+             border-width: 5px; align-items:center; }
       hgroup{overflow:hidden;padding-bottom:20px; }
       hgroup h1{float:none;font-size:36px;color:#000, text-align:center; }
       hgroup h2{float:right;font-weight:normal;color:#000;opacity:0.8}
@@ -179,7 +179,7 @@
       .video-center {
          display: flex;
          justify-content:center; /*가로 중앙*/
-         /*align-items:center; 세로 중앙*/
+         align-items:center; /*세로 중앙*/
       }
 
       .video-row {
