--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         place-items: center;
 
          background-image:url('https://tjdgus5160.github.io/check_pattern.png');
-         background-repeat:no-repeat; /* 기본값:가로, 세로 모두 반복*/
+         background-repeat:repeat; /* 기본값:가로, 세로 모두 반복*/
          background-size:cover; /* 이미지 크기 조절*/
          background-position:center center; /* 시작 위치*/ 
          background-color: #fff;
@@ -234,7 +234,7 @@
 </head>
 <body> 
 
-   <video id="myVideo" width="960" height="720" autoplay loop muted>
+   <video id="myVideo" width=50% height=50% autoplay loop muted>
      <source src="https://tjdgus5160.github.io/KakaoTalk_20250420_022556182.mp4" type="video/mp4">
      브라우저가 video 태그를 지원하지 않습니다.
    </video>
