--- a/index.html
+++ b/index.html
@@ -29,11 +29,13 @@
       }
       li{list-style:none}
 
-      <h2 id="anime-text" style="text-align:center; margin-top:30px; font-size:2.3em; letter-spacing:0.15em;">
-        <span>H</span><span>E</span><span>L</span><span>L</span><span>O</span>
-        <span>&nbsp;</span>
-        <span>W</span><span>O</span><span>R</span><span>L</span><span>D</span>
-      </h2>
+      <div id="container">
+         <h2 id="anime-text" style="text-align:center; margin-top:30px; font-size:2.3em; letter-spacing:0.15em;">
+           <span>H</span><span>E</span><span>L</span><span>L</span><span>O</span>
+           <span>&nbsp;</span>
+           <span>W</span><span>O</span><span>R</span><span>L</span><span>D</span>
+         </h2>
+      </div>
 
       
       #container{width:80%; margin:0; box-sizing:border-box; }
