--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
    <img id="custom-cursor" src="https://tjdgus5160.github.io/Half-life.png" style="display:none;" />
 
    <div id="container">
-      <h2 id="anime-text" style="text-align:center; margin-top:30px; font-size:2.3em; letter-spacing:0.15em;">
+      <h2 id="FUCK YOU" style="text-align:center; margin-top:30px; font-size:2.3em; letter-spacing:0.15em;">
          <span>H</span><span>E</span><span>L</span><span>L</span><span>O</span>
          <span>&nbsp;</span>
          <span>W</span><span>O</span><span>R</span><span>L</span><span>D</span>
@@ -426,7 +426,7 @@ document.addEventListener('mousemove', (e) => {
 </script>
 <script>
 anime({
-  targets: "FUCK YOU",
+  targets: "#anime-text span",
   // y축으로 위로 올라갔다가 다시 내려오게
   translateY: [
     { value: -44, duration: 600, easing: 'easeOutExpo' },
