--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@ document.addEventListener('mousemove', (e) => {
 </script>
 <script>
 anime({
-  targets: "#anime-text span",
+  targets: "#FUCK YOU span",
   // y축으로 위로 올라갔다가 다시 내려오게
   translateY: [
     { value: -44, duration: 600, easing: 'easeOutExpo' },
