--- a/index.html
+++ b/index.html
@@ -230,6 +230,10 @@
          transition:width 0.2s, height 0.2s, border 0.2s;
       }
 
+      #anime-text span{
+         display: inline-block;
+      }
+
   </style> 
 </head>
 <body> 
