--- a/index.html
+++ b/index.html
@@ -250,10 +250,10 @@
    <img id="custom-cursor" src="https://tjdgus5160.github.io/Half-life.png" style="display:none;" />
 
    <div id="container">
-      <h2 id="anime-text" style="text-align:center; margin-top:30px; font-size:2.3em; letter-spacing:0.15em;">
-         <span>H</span><span>E</span><span>L</span><span>L</span><span>O</span>
+      <h2 id="anime-text" style="text-align:center; margin-top:30px; font-size:4em; letter-spacing:0.15em;">
+         <span>F</span><span>U</span><span>C</span><span>K</span>
          <span>&nbsp;</span>
-         <span>W</span><span>O</span><span>R</span><span>L</span><span>D</span>
+         <span>Y</span><span>O</span><span>U</span>
       </h2>
       
    <header>
