--- a/index.html
+++ b/index.html
@@ -230,6 +230,15 @@
          transition:width 0.2s, height 0.2s, border 0.2s;
       }
 
+      #anime-text {
+         text-align:center;
+         margin-top:30px;
+         font-size:4em;
+         letter-spacing:0.15em;
+         mix-blend-mode:difference;
+         color:#fff;
+      }
+      
       #anime-text span{
          display: inline-block;
       }
@@ -250,7 +259,7 @@
    <img id="custom-cursor" src="https://tjdgus5160.github.io/Half-life.png" style="display:none;" />
 
    <div id="container">
-      <h2 id="anime-text" style="text-align:center; margin-top:30px; font-size:4em; letter-spacing:0.15em;">
+      <h2 id="anime-text" class="invert-text" style="text-align:center; margin-top:30px; font-size:4em; letter-spacing:0.15em;">
          <span>F</span><span>U</span><span>C</span><span>K</span>
          <span>&nbsp;</span>
          <span>Y</span><span>O</span><span>U</span>
