--- a/index.html
+++ b/index.html
@@ -255,7 +255,8 @@
    <img id="custom-cursor" src="https://tjdgus5160.github.io/Half-life.png" style="display:none;" />
 
    <div id="container">
-      <h2 id="anime-text" class="invert-text" style="text-align:center; margin-top:30px; font-size:4em; letter-spacing:0.15em;">
+      <h2 id="anime-text" class="invert-text" style="text-align:center; 
+         margin-top:30px; font-size:4em; letter-spacing:0.15em;">
          <span>F</span><span>U</span><span>C</span><span>K</span>
          <span>&nbsp;</span>
          <span>Y</span><span>O</span><span>U</span>
@@ -431,7 +432,6 @@ document.addEventListener('mousemove', (e) => {
 <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js">
    
 </script>
-<script>
 anime({
   targets: "#anime-text span",
   // y축으로 위로 올라갔다가 다시 내려오게
@@ -449,6 +449,35 @@ anime({
   loopDelay: 1000,
   easing: 'inOutCirc'
 });
+</script>
+
+</script>
+<script>
+const animeText = document.getElementById('anime-text');
+let animated = false;
+
+const observer = new IntersectionObserver((entries) => {
+  entries.forEach(entry => {
+    if (entry.isIntersecting && !animated) {
+      animated = true;
+      anime({
+        targets: "#anime-text span",
+        translateY: [
+          { value: -44, duration: 600, easing: 'easeOutExpo' },
+          { value: 0, duration: 800, delay: 100, easing: 'easeOutBounce' }
+        ],
+        rotate: {
+          value: '1turn',
+          easing: 'easeInOutSine'
+        },
+        delay: (el, i) => i * 50,
+        easing: 'inOutCirc'
+      });
+    }
+  });
+}, { threshold: 0.2 });
+
+observer.observe(animeText);
 </script>
 
 
