--- a/index.html
+++ b/index.html
@@ -430,8 +430,9 @@ document.addEventListener('mousemove', (e) => {
 </script>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js">
-   
 </script>
+
+<script>
 anime({
   targets: "#anime-text span",
   // y축으로 위로 올라갔다가 다시 내려오게
@@ -451,7 +452,6 @@ anime({
 });
 </script>
 
-</script>
 <script>
 const animeText = document.getElementById('anime-text');
 let animated = false;
