--- a/index.html
+++ b/index.html
@@ -243,7 +243,26 @@
       .scroll-container {
         scroll-snap-type: y mandatory;
         overflow-y: scroll;
-        height: 100vh;
+        height: 200vh;
+
+         scrollbar-width:thin;
+         scrollbar-color: #99ccff #222;
+      }
+
+      .scroll-container::-webkit-scrollbar {
+         width:14px;
+         background:#222;
+      }
+
+      .scroll-container::-webkit-scrollbar-thumb {
+         background: linear-gradient(135deg, #99ccff 30%, #0077cc 100%);
+         border-radius:8px;
+         border:3px solid #222;
+         box-shadow:0 2px 8px rgba(0,0,0,0.15);
+      }
+
+      .scroll-container::-webkit-scrollbar-thumb:hover {
+         background: linear-gradient(135deg, #0077cc 0%, #99ccff 100%);
       }
 
       .scroll-section {
