--- a/index.html
+++ b/index.html
@@ -168,9 +168,8 @@
       article{margin-bottom:10px}
       article h3{font-size:16px}
       aside{float:right;width:40%;padding:10px;margin-top:15px;border:
-                         1px solid #330000;line-height:20px ;background: #fff; border-width: 5px;
-           flex-direction:column; justify-content:center;}
-      aside p { text-align:center; }
+                         1px solid #330000;line-height:20px ;background: #fff; border-width: 5px; }
+      aside p { text-align:center; justify-content:center; }
       aside .ad{height:100px;margin-bottom:20px;background-color:#ebebeb}
       footer{width:80%;padding:20px;border:1px solid #330000 ;background: #fff;
               text-align:center; border-width: 3px; clear:both; align-items:center;
