--- a/index.html
+++ b/index.html
@@ -169,8 +169,8 @@
       article h3{font-size:16px}
       aside{float:right;width:40%;padding:10px;margin-top:15px;border:
                          1px solid #330000;line-height:20px ;background: #fff; border-width: 5px; }
-      aside p { text-align:center; margin:0;}
-      aside .ad{height:100px;margin-bottom:20px;background-color:#ebebeb}
+      aside p { text-align:center;}
+      aside .ad{height:100px;margin-bottom:20px;background-color:#ebebeb; margin:0; align-items:center; justify-content:center;}
       footer{width:80%;padding:20px;border:1px solid #330000 ;background: #fff;
               text-align:center; border-width: 3px; clear:both; align-items:center;
             margin: 0 auto; margin-bottom:30px; 
