--- a/index.html
+++ b/index.html
@@ -260,9 +260,9 @@
    <div id="container">
       <h2 id="anime-text" class="invert-text" style="text-align:center; 
          margin-top:30px; font-size:4em; letter-spacing:0.15em;">
-         <span>F</span><span>U</span><span>C</span><span>K</span>
+         <span>Hello</span><span>I'm</span>
          <span>&nbsp;</span>
-         <span>Y</span><span>O</span><span>U</span>
+         <span>Park</span><span>SeongHyeon</span>
       </h2>
       
    <header>
