--- a/index.html
+++ b/index.html
@@ -260,12 +260,12 @@
    <div id="container">
       <h2 id="anime-text" class="invert-text" style="text-align:center; 
          margin-top:30px; font-size:4em; letter-spacing:0.15em;">
-         <span>H</span><span>e</span><span>l</span><span>l</span><span>l</span><span>o</span>
+         <span>H</span><span>e</span><span>l</span><span>l</span><span>o</span>
          <span>I</span><span>'</span><span>m</span>
          <span>&nbsp;</span>
-         <span>P</span><span>a</span><span>r</span><span>k</span><span>S</span><span>e</span>
-         <span>o</span><span>n</span><span>g</span><span>H</span><span>y</span><span>e</span>
-         <span>o</span><span>n</span>
+         <span>P</span><span>a</span><span>r</span><span>k</span>
+         <span>S</span><span>e</span><span>o</span><span>n</span><span>g</span>
+         <span>H</span><span>y</span><span>e</span><span>o</span><span>n</span>
       </h2>
       
    <header>
