--- a/CBQRC.html
+++ b/CBQRC.html
@@ -64,6 +64,17 @@
             main { padding: 30px 15px; }
             nav a { margin: 0 15px; }
         }
+        .main-image {
+            max-width: 800px;
+            margin: 30px auto;
+            border-radius: 8px;
+            box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+        }
+        .main-image img {
+            width: 100%;
+            height: auto;
+            border-radius: 8px;
+        }
     </style>
 </head>
 <body>
@@ -84,6 +95,11 @@
                 충북양자연구센터(CBQRC)는 차세대 양자기술 연구 개발을 선도하는 핵심 연구기관입니다.<br>
                 양자컴퓨팅, 양자센싱, 양자통신 분야의 융합 연구를 통해 4차 산업혁명을 주도합니다.
             </p>
+            <div class="main-image">
+                <img src="https://tjdgus5160.github.io/스크린샷 2025-05-20 214558.png" 
+                     alt="충북양자연구센터 연구 시설"
+                     style="display: block; margin: 20px auto; border: 1px solid #eee;">
+            </div>
         </section>
         <section id="research">
             <h2>연구분야</h2>
