--- a/CBQRC.html
+++ b/CBQRC.html
@@ -92,8 +92,8 @@
         <section id="about">
             <h2>센터소개</h2>
             <p style="line-height: 1.7; font-size: 1.1em;">
-                충북양자연구센터(CBQRC)는 차세대 양자기술 연구 개발을 선도하는 핵심 연구기관입니다.<br>
-                양자컴퓨팅, 양자센싱, 양자통신 분야의 융합 연구를 통해 4차 산업혁명을 주도합니다.
+                충북양자연구센터(CBQRC)는 국책사업 기획 및 출연연 공모사업 발굴 유치, 양자 물질 및 소자 원천기술 개발, 지역전략산업 연계 산업화 촉진, 산학연 협력체계 구축 등 양자기술 육성을 중점적으로 추진하는 기관입니다.<br>
+                과학기술정보통신부 인력양성 사업(대학ICT 연구센터)을 통해 양자 기초, 응용분야 연구역량 강화, 정부출연연구기관 및 도내 기업과의 공동연구, 스타트업 및 양자솔루션 기업 지원 등을 확대해 지역 양자산업을 선도할 우수 인재를 양성할 계획입니.
             </p>
             <div class="main-image">
                 <img src="https://tjdgus5160.github.io/스크린샷 2025-05-20 214558.png" 
@@ -102,27 +102,27 @@
             </div>
         </section>
         <section id="research">
-            <h2>연구분야</h2>
+            <h2>추진</h2>
             <ul style="line-height: 2; font-size: 1.1em;">
-                <li>▸ 양자 알고리즘 및 소프트웨어 플랫폼 개발</li>
-                <li>▸ 초정밀 양자 센서 기술 연구</li>
-                <li>▸ 양자암호통신 네트워크 구축</li>
-                <li>▸ 양자소재 및 디바이스 개발</li>
+                <li>▸ 양자기술 측정 장비 및 대상 물질 공동개발</li>
+                <li>▸ 양자기술 상호협력 및 공동연구</li>
+                <li>▸ 양자기술 정보공유 및 학술교류</li>
+                <li>▸ 인력양성을 위한 협력관계 구축 및 인적교류</li>
             </ul>
         </section>
         <section id="news">
             <h2>공지사항</h2>
             <ul style="line-height: 1.8; font-size: 1.1em;">
-                <li>2025.05.25 - 양자연구 국제심포지엄 개최 안내</li>
-                <li>2025.05.21 - 홈페이지 정식 오픈</li>
+                <li>.</li>
+                <li>2024.07.02 - 충북양자연구센터(CBQRC) 개소</li>
             </ul>
         </section>
         <section id="contact">
             <h2>연락처</h2>
             <p style="line-height: 1.7; font-size: 1.1em;">
-                ▸ 주소: 충청북도 청주시 서원구 양지로 77<br>
-                ▸ 전화: 043-234-5678<br>
-                ▸ 이메일: contact@cbqrc.kr
+                ▸ 주소: 충청북도 청주시 서원구 충대로 1, 충북대학교학연산공동기술연구원 701호<br>
+                ▸ 전화: 043-261<br>
+                ▸ 이메일: kiwoong@cbnu.ac.kr
             </p>
         </section>
     </main>
