--- a/CBQRC.html
+++ b/CBQRC.html
@@ -84,7 +84,7 @@
     </header>
     <nav>
         <a href="#about">센터소개</a>
-        <a href="#research">연구분야</a>
+        <a href="CBQRC.html">연구분야</a>
         <a href="#news">공지사항</a>
         <a href="#contact">연락처</a>
     </nav>
