--- a/CBQRC_activity.html
+++ b/CBQRC_activity.html
@@ -1,1 +1,108 @@
-asd
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+    <meta charset="UTF-8">
+    <title>충북양자연구센터 (CBQRC)</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css">
+    <style>
+        body { 
+            font-family: 'Pretendard', -apple-system, BlinkMacSystemFont, sans-serif; 
+            margin: 0; 
+            background: #f5f7fa; 
+            font-weight: 500;
+        }
+        header { 
+            background: #2d3e50; 
+            color: #fff; 
+            padding: 40px 0; 
+            text-align: center; 
+        }
+        h1 {
+            font-weight: 700;
+            font-size: 2.5em;
+            margin: 10px 0;
+        }
+        nav { 
+            background: #1a232f; 
+            padding: 15px 0; 
+            font-weight: 700;
+        }
+        nav a { 
+            color: #fff; 
+            text-decoration: none; 
+            margin: 0 25px; 
+            font-size: 1.1em;
+        }
+        nav a:hover { 
+            color: #4fc3f7; 
+        }
+        main { 
+            max-width: 1000px; 
+            margin: 40px auto; 
+            background: #fff; 
+            padding: 50px 40px; 
+            border-radius: 15px; 
+            box-shadow: 0 4px 12px rgba(0,0,0,0.1); 
+        }
+        h2 {
+            color: #2d3e50;
+            border-bottom: 3px solid #e0e4ea;
+            padding-bottom: 12px;
+            font-weight: 700;
+            font-size: 1.8em;
+        }
+        footer { 
+            text-align: center; 
+            color: #666; 
+            padding: 30px 0; 
+            background: #f0f0f0; 
+            margin-top: 60px;
+            font-weight: 500;
+        }
+        @media (max-width: 768px) {
+            main { padding: 30px 15px; }
+            nav a { margin: 0 15px; }
+        }
+        .main-image {
+            max-width: 800px;
+            margin: 30px auto;
+            border-radius: 8px;
+            box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+        }
+        .main-image img {
+            width: 100%;
+            height: auto;
+            border-radius: 8px;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>충북양자연구센터</h1>
+        <p style="font-weight: 600; font-size: 1.2em;">Chungbuk Quantum Research Center</p>
+    </header>
+    <main>
+        <section id="about">
+            <h2>Activity</h2>
+
+            <div class="main-image">
+                <img src="https://tjdgus5160.github.io/스크린샷 2025-05-20 214558.png" 
+                     alt="충북양자연구센터 연구 시설"
+                     style="display: block; margin: 20px auto; border: 1px solid #eee;">
+            </div>
+
+        <section id="contact">
+            <h2>연락처</h2>
+            <p style="line-height: 1.7; font-size: 1.1em;">
+                ▸ 주소: 충청북도 청주시 서원구 충대로 1, 충북대학교학연산공동기술연구원 701호<br>
+                ▸ 전화: 043-261<br>
+                ▸ 이메일: kiwoong@cbnu.ac.kr
+            </p>
+        </section>
+    </main>
+    <footer>
+        <p style="margin: 0;">© 2024 Chungbuk Quantum Research Center </p>
+    </footer>
+</body>
+</html>
