--- a/CBQRC_activity.html
+++ b/CBQRC_activity.html
@@ -85,7 +85,7 @@
     <main>
         <section id="about">
             <h2>Activity</h2>
-            <p style="font-weight: 500; font-size: 1.2em;"> 1. Quantum Korea 2025 [2025.06.24 ~ 2025.06.26]
+            <p style="font-weight: 500; font-size: 1.2em;"> ▶ Quantum Korea 2025 [2025.06.24 ~ 2025.06.26]
             <div class="main-image">
                 <img src="https://tjdgus5160.github.io/스크린샷 2025-05-20 214558.png" 
                      alt="충북양자연구센터 연구 시설"
