--- a/CBQRC_activity.html
+++ b/CBQRC_activity.html
@@ -92,6 +92,13 @@
                      style="display: block; margin: 20px auto; border: 1px solid #eee;">
             </div>
 
+            <p style="font-weight: 500; font-size: 1.2em;"> ▶ 충북양자연구센터(CBQRC) 설립 [2024.07.02]
+            <div class="main-image">
+                <img src="https://tjdgus5160.github.io/양자센터.jpg" 
+                     alt="충북양자연구센터 개소식"
+                     style="display: block; margin: 20px auto; border: 1px solid #eee;">
+            </div>
+
         <section id="contact">
             <h2>연락처</h2>
             <p style="line-height: 1.7; font-size: 1.1em;">
