--- a/CBQRC.html
+++ b/CBQRC.html
@@ -96,7 +96,7 @@
                 과학기술정보통신부 인력양성 사업(대학ICT 연구센터)을 통해 양자 기초, 응용분야 연구역량 강화, 정부출연연구기관 및 도내 기업과의 공동연구, 스타트업 및 양자솔루션 기업 지원 등을 확대해 지역 양자산업을 선도할 우수 인재를 양성할 계획입니다.
             </p>
             <div class="main-image">
-                <img src="https://tjdgus5160.github.io/스크린샷 2025-05-20 214558.png" 
+                <img src="https://tjdgus5160.github.io/CBQRC_quantum_korea.png" 
                      alt="충북양자연구센터 연구 시설"
                      style="display: block; margin: 20px auto; border: 1px solid #eee;">
             </div>
