--- a/CBQRC_activity.html
+++ b/CBQRC_activity.html
@@ -87,14 +87,14 @@
             <h2>Activity</h2>
             <p style="font-weight: 500; font-size: 1.2em;"> ▶ Quantum Korea 2025 [2025.06.24 ~ 2025.06.26]
             <div class="main-image">
-                <img src="https://tjdgus5160.github.io/스크린샷 2025-05-20 214558.png" 
+                <img src="https://tjdgus5160.github.io/CBQRC_quantum_korea.png" 
                      alt="충북양자연구센터 연구 시설"
                      style="display: block; margin: 20px auto; border: 1px solid #eee;">
             </div>
 
             <p style="font-weight: 500; font-size: 1.2em;"> ▶ 충북양자연구센터(CBQRC) 설립 [2024.07.02]
             <div class="main-image">
-                <img src="https://tjdgus5160.github.io/양자센터.jpg" 
+                <img src="https://tjdgus5160.github.io/cbqrc.jpg" 
                      alt="충북양자연구센터 개소식"
                      style="display: block; margin: 20px auto; border: 1px solid #eee;">
             </div>
